# push-flx4-aggregate

./: .gitignore  CMakeLists.txt  com.pushflx4.helper.plist
helper/: CMakeLists.txt
helper/src/: AudioEngine.cpp  AudioEngine.h  HardwareDevice.cpp  HardwareDevice.h  MachServer.cpp  MachServer.h  ProcessTap.h  ProcessTap.mm  main.cpp
plugin/: CMakeLists.txt
plugin/src/: Info.plist.in  MachClient.cpp  MachClient.h  PluginDevice.h  PluginEntry.cpp  PluginHandler.cpp  PluginHandler.h
scripts/: install.sh  uninstall.sh
shared/: CMakeLists.txt
shared/include/: Constants.h  DriftTracker.h  SharedMemory.h
src/: AggregateDevice.h  AggregateHandler.cpp  AggregateHandler.h  DriftTracker.h  HardwareDevice.cpp  HardwareDevice.h  Info.plist.in  PluginEntry.cpp  TPCircularBuffer.c  TPCircularBuffer.h
